# yt-dlp-repl

./: Cargo.toml  LICENSE  LICENSE.md  README.md  rustfmt.toml
src/: main.rs  menu.rs  repl.rs
